# JBA_ventures_backend

./: .env  .gitignore  README.md  createsuperuser.py  main.py  pyproject.toml  requirements.txt  scripts.py
real_estate_api/: asgi.py  settings.py  urls.py  wsgi.py
v1/authentication/: serializers.py  urls.py  views.py
v1/property/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
v1/property/migrations/: 0001_initial.py  0002_alter_property_description_alter_property_price.py  0002_rename_area_property_lga_property_title.py  0003_alter_property_options_alter_property_price.py
v1/property/tests/: test_models.py  test_views.py
