[project]
name = "jba-ventures-backend"
version = "0.1.0"
description = "an api for storing real estate data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "boto3>=1.40.32",
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-cors-headers>=4.8.0",
    "django-filter>=25.1",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg2>=2.9.10",
    "whitenoise>=6.10.0",
]


[dependency-groups]
dev = []
